@@ -100,7 +100,7 @@ Conditionals=
 DebugSourceDirs=
 UsePackages=0
 [Parameters]
-RunParams=/nocompile "..\demo2\03 Data"
+RunParams=/nocompile /proto ..\conv\proto_http /src ..\conv\demo1 /x:XxmSourcePath D:\Data\2013\xxm "..\demo2\03 Data MongoDB"
 HostApplication=
 Launcher=
 UseLauncher=0
@@ -130,22 +130,3 @@ OriginalFilename=
 ProductName=xxm
 ProductVersion=1.0.0.0
 Comments=http://xxm.sf.net/
-[HistoryLists\hlUnitAliases]
-Count=1
-Item0=WinTypes=Windows;WinProcs=Windows;DbiTypes=BDE;DbiProcs=BDE;DbiErrs=BDE;
-[HistoryLists\hlSearchPath]
-Count=3
-Item0=sdk;..\public
-Item1=C:\Program Files\Indy9
-Item2=..\..\public
-[HistoryLists\hlUnitOutputDirectory]
-Count=2
-Item0=..\dcu
-Item1=dcu
-[HistoryLists\hlOutputDirectorry]
-Count=5
-Item0=..\bin
-Item1=setup\xxmGeckoDev\platform\WINNT\components
-Item2=C:\Program Files\Mozilla Firefox\components
-Item3=C:\Inetpub\xxm
-Item4=..\
