@@ -10,6 +10,7 @@ type
     ptProjectSwitches,
     ptProjectHeader,
     ptProjectBody,
+    ptProjectPath,
     ptFragmentUnit,
     ptFragmentPath,
     ptFragmentID,
@@ -72,6 +73,7 @@ const
     'ProjectSwitches',
     'ProjectHeader',
     'ProjectBody',
+    'ProjectPath',
     'FragmentUnit',
     'FragmentPath',
     'FragmentID',
