@@ -33,8 +33,8 @@
 -K$00400000
 -E"..\bin"
 -N"..\dcu"
--LE"C:\Delphi7\Projects\Bpl"
--LN"C:\Delphi7\Projects\Bpl"
+-LE"c:\delphi7\Projects\Bpl"
+-LN"c:\delphi7\Projects\Bpl"
 -U"sdk;..\public"
 -O"sdk;..\public"
 -I"sdk;..\public"
