@@ -31,10 +31,10 @@
 -M
 -$M16384,1048576
 -K$00400000
--E"C:\Users\User1\AppData\Roaming\Mozilla\Firefox\Profiles\q5c6fvis.default\extensions\xxmGeckoDev@xxm.sourceforge.net\platform\WINNT\components"
+-E"..\bin"
 -N"..\dcu"
--LE"C:\Delphi7\Projects\Bpl"
--LN"C:\Delphi7\Projects\Bpl"
+-LE"c:\delphi7\Projects\Bpl"
+-LN"c:\delphi7\Projects\Bpl"
 -U"sdk;..\public"
 -O"sdk;..\public"
 -I"sdk;..\public"
