@@ -7,13 +7,12 @@ uses
   SysUtils,
   xxm in '..\bin\public\xxm.pas',
   xxmHeaders in '..\bin\public\xxmHeaders.pas',
-  xxmGeckoProtocol in 'xxmGeckoProtocol.pas',
   xxmGeckoChannel in 'xxmGeckoChannel.pas',
   xxmGeckoModule in 'xxmGeckoModule.pas',
   xxmGeckoInterfaces in 'xxmGeckoInterfaces.pas',
   xxmSettings in 'xxmSettings.pas',
   xxmPReg in '..\common\xxmPReg.pas',
-  xxmPRegLocal in '..\local\xxmPRegLocal.pas',
+  xxmPRegLocal in '..\common\xxmPRegLocal.pas',
   xxmParams in '..\common\xxmParams.pas',
   xxmParUtils in '..\common\xxmParUtils.pas',
   xxmGeckoStreams in 'xxmGeckoStreams.pas',
