@@ -11,7 +11,7 @@ uses
   xxmSettings in 'xxmSettings.pas',
   xxmWinInet in 'xxmWinInet.pas',
   xxmPReg in '..\common\xxmPReg.pas',
-  xxmPRegLocal in 'xxmPRegLocal.pas',
+  xxmPRegLocal in '..\common\xxmPRegLocal.pas',
   xxmParams in '..\common\xxmParams.pas',
   xxmParUtils in '..\common\xxmParUtils.pas',
   xxmHeaders in '..\bin\public\xxmHeaders.pas',
